redesign to use on repository call to avoid data mutation between generation of exports